correct spacing

--- a/app/assets/sass/core/components/_impact.scss
+++ b/app/assets/sass/core/components/_impact.scss
@@ -19,9 +19,9 @@
     background: $overlay-heavy;
     @include grid-column(1 / 2);
     position: relative;
-    margin: $gutter;
+    margin: $gutter*0.5;
     .overlay-content {
-      padding: $gutter;
+      padding: $gutter*0.5;
       h2, p {
         padding-left: 0;
         padding-right: 0;
